[package]
name = "lori"
version = "0.3.0"
edition = "2021"
description = "A CLI utility that receives emails from SMTP and sends them to SendGrid."
license = "Apache-2.0"
rust-version = "1.63.0"
readme = "README.md"
repository = "https://github.com/meysam81/lori"
documentation = "https://docs.rs/lori"
authors = ["Meysam <contact@meysam.io>"]
keywords = ["smtp", "sendgrid", "mail", "email", "cli"]
categories = ["network-programming", "command-line-interface"]
include = [
    ".cargo",
    "src",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
mail-parser = { version = "0.8.2", features = ["serde", "serde_support"] }
nom = "7.1.3" # not directly required, pinned for rust future compatibility
num_cpus = "1.15.0"
regex = { version = "1.9.6", features = ["std"] }
samotop = "0.13.2"
sendgrid = { version = "0.19.0", features = ["async"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
